task1-hardening/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Image tag ':latest' is not allowed. Use a pinned, immutable tag."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
